[gd_scene load_steps=4 format=3 uid="uid://b5cnwgn2a4cpc"]

[ext_resource type="Script" path="res://Abstract/UI/MainMenu.gd" id="1_r5swr"]
[ext_resource type="FontFile" uid="uid://bfr6jp74u3gpi" path="res://Assets/ttf/SuperTechnology.ttf" id="1_xn8dq"]
[ext_resource type="PackedScene" uid="uid://ddn2d7q385rot" path="res://World/Background.tscn" id="2_6p3s0"]

[node name="ColorRect" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.0627451, 0.0627451, 0.537255)
script = ExtResource("1_r5swr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "The"
horizontal_alignment = 1

[node name="Label2" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_xn8dq")
bbcode_enabled = true
text = "
[center][wave freq=1.5]Frontier Express"
fit_content = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start
"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" parent="CanvasLayer" instance=ExtResource("2_6p3s0")]

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
